# NASMon

./: .gitignore  BargraphComponent.py  Command.py  CommandComponent.py  Components.py  ImageComponent.py  LICENSE  Microcontroller.py  Monitor.py  Page.py  Pages.py  README.md  TextComponent.py  config.yaml  main.py  nasmon.py  platformio.ini  pyproject.toml
arduino/: PacketSerialNASMon.ino
conf/: conf.yml
hardware/uC/: NASMon_stm32.cpp
icons/banner/: banner.xcf
icons/chip/: chip.xcf
icons/cpu/: cpu.xcf
icons/ethernet/: ethernet.xcf
icons/logo/: logo.xcf
icons/test_grid/: test_grid.xcf
pages/: banner.yml  conditional.yml.off  cpu.yml  date.yml  ip.yml  ram.yml  templated.yml.off  test.yml
